Version 2.02.60 - 23rd January 2010
===================================
  Fix return code of info call for query by uuid.
  Extend cmirrord man page.
  Sleep before first progress check if pvmove/lvconvert interval has prefix '+'.
  Default to checking progress before waiting in _wait_for_single_lv.
  Fix cmirror initscript (including syntax error).
  Eliminate avoidable ioctls for checking open_count in _add_new_lv_to_dtree.
  Disable memory debugging if dmeventd is configured. (Not thread-safe.)
  Fix first log message prefix in syslog for dmeventd plugins.
  Fix exported symbols names for dmeventd lvm2 wrapper plugin.
  Make failed locking initialisation messages more descriptive.

Version 2.02.59 - 21st January 2010
===================================
  Add libdevmapper-event-lvm2.so to serialise dmeventd plugin liblvm2cmd use.
  Cleanup memory initialization and freeing in pv_read() and pv_create().
  Clear pointer and counters after their release in _fin_commands().
  Stop dmeventd trying to access already-removed snapshots.
  Remove (fallback) /dev mknod from cmirrord.
  Add t-topology-support.sh and t-snapshot-merge.sh tests.
  Fix clvmd to never scan suspended devices.
  Fix dmeventd build outside source tree.
  Assorted cmirror code changes to remove various compiler warnings.
  Fix detection of completed snapshot merge.
  Add Red Hat cmirror initscript (unfinished).
  Add cmirrord man page (incomplete).
  Make cluster log communication structures architecture independant.
  Fix cluster log in-memory bitmap handling.
  Improve snapshot merge metadata import validation.
  Improve target type compatibility checking in _percent_run().
  Add 'target_status_compatible' method to 'struct segtype_handler'.
  Change underscore to hyphen in table line for clustered log type.

Version 2.02.58 - 14th January 2010
===================================
  Cleanup some minor gcc warnings.
  Add --merge to lvconvert to merge a snapshot into its origin.